--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "^12.23.24",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
@@ -54,6 +55,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
